button alignment fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,7 +60,9 @@ ul>li {
 .btn {
     margin-bottom: 20px;
     border-radius: 0px;
-    padding: 10px 15px 20px 20px;
+    padding: 10px 12px 15px 20px;
+    text-transform: uppercase;
+    font-size: 1.1rem;
 }
 
 /* media queries */
